Fix up header alignment to main content

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -8,6 +8,7 @@
       right: 0
       top: 50%
       margin-top: -22px
+      margin-right: 15px
     h1
       color: white
       margin: 0
